--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "eslint-config-prettier": "^6.11.0"
+  },
   "keywords": [
     "eslint",
     "eslint-config",
