Breaking: Update for Node.js 10 support
* Enable parsing of ECMAScript 2018 syntax but forbid use by adding a
  eslint-plugin-node rule.
* Permit use of ECMAScript 2018 global variables
* Add common ignorePatterns into shared config
* Declare override section for `test/**` to support mocha
* Drop separate test.json published file
* Declare support for node.js 10+

--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "repository": "gulpjs/eslint-config-gulp",
   "license": "MIT",
   "engines": {
-    "node": ">= 0.10"
+    "node": ">=10"
   },
   "main": "eslint.js",
   "files": [
     "LICENSE",
-    "eslint.js",
-    "test.json"
+    "eslint.js"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "eslint-config-prettier": "^6.11.0"
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-node": "^11.1.0"
   },
   "keywords": [
     "eslint",
