--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "eslint.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint ."
   },
   "dependencies": {
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-node": "^11.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   },
   "keywords": [
     "eslint",
